# L2M

./: .env.example  .gitignore  GITHUB_ISSUES.md  IMPROVEMENT_CHECKLIST.md  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PRODUCTION_READINESS_PLAN.md  README.md  example_usage.py  pyproject.toml  requirements.txt  run.py  setup.py  verify_installation.py
docs/: presentation_slides.md  project_documentation.md
docs/assets/: pipeline.md
l2m/: config.py  exceptions.py  main.py
l2m/assets/soundfonts/: README.md
l2m/llm/: client.py  parsers.py
l2m/llm/prompts/: emotion_prompt.txt  melody_prompt.txt
l2m/output/: output.mid  output.musicxml
l2m/services/: audio_renderer.py  lyric_parser.py  melody_generator.py  midi_writer.py
l2m/tests/: test_audio_renderer.py  test_emotion_analysis.py  test_input_validators.py  test_melody_generation.py  test_path_utils.py
l2m/utils/: input_validators.py  logger.py  path_utils.py  progress.py  validators.py
lyrics_to_melody/: config.py  exceptions.py  main.py
lyrics_to_melody/llm/: client.py  parsers.py
lyrics_to_melody/llm/prompts/: emotion_prompt.txt  melody_prompt.txt
lyrics_to_melody/models/: emotion_analysis.py  melody_structure.py
lyrics_to_melody/services/: lyric_parser.py  melody_generator.py  midi_writer.py
lyrics_to_melody/tests/: test_emotion_analysis.py  test_input_validators.py  test_melody_generation.py  test_path_utils.py
lyrics_to_melody/utils/: input_validators.py  logger.py  path_utils.py  progress.py  validators.py
